--- a/js practice/index.html
+++ b/js practice/index.html
@@ -7,19 +7,16 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- km --- miles -->
     <input type="number" id="data">km/h
     <button onclick="convert()">convert</button>
     <h1 id="result"></h1>
-    <script>
-        function convert(){
-            let kms = document.getElementById("data").value;
-            // alert(`${kms}`)
-            const factor = 0.621371;
-            let miles = kms * factor;
-            // alert(miles);
-            // return miles;
-            document.getElementById('result').innerHTML = `${miles}`;
-        }
-    </script>
+
+    <!--  celcius-- >-fahrenheite--> 
+    <input type="number" id="value">
+    <button onclick="change()">convert</button>
+    <h2 id="ferh"></h2>
+   
+    <script src="./script.js"></script>
 </body>
 </html>
