wether app deleted

--- a/js practice/index.html
+++ b/js practice/index.html
@@ -13,7 +13,7 @@
     <h1 id="result"></h1>
 
     <!--  celcius-- >-fahrenheite--> 
-    <input type="number" id="value">
+    <input type="number" id="value">celcius
     <button onclick="change()">convert</button>
     <h2 id="ferh"></h2>
    
